intro: modify the python image

--- a/1_introduction_pydscpf.ipynb
+++ b/1_introduction_pydscpf.ipynb
@@ -145,7 +145,7 @@
     "Introduction\n",
     "======================\n",
     "\n",
-    "![](Images/python-logo-master-v3-TM.jpg)"
+    "![](Images/python-logo-master-v3-TM.png)"
    ]
   },
   {
