numpy notebook: add a slide representation

--- a/numpy_merged.ipynb
+++ b/numpy_merged.ipynb
@@ -5524,7 +5524,11 @@
   {
    "cell_type": "markdown",
    "id": "f0344aee",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "![image alt <](Images/numpy.jpg)\n",
     "![image alt >](Images/numgrade.png)"
